--- a/_config.yml
+++ b/_config.yml
@@ -171,6 +171,11 @@ defaults:
       path: assets/js/dist
     values:
       swcache: true
+  - scope:
+      path: assets/images/favicons
+    values:
+      swcache: true
+
 
 sass:
   style: compressed
