--- a/_config.yml
+++ b/_config.yml
@@ -183,7 +183,7 @@ compress_html:
   profile: false
   blanklines: false
   ignore:
-    envs: [development]
+    envs: [production]
 
 exclude:
   - "*.gem"
