--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 .obsidian
+_posts/2024-03-31-Hypervisor From Scratch.md
+_posts/2024-03-31-Hypervisor Study.md
+_posts/2024-04-05-Useful Code Snippets.md
+assets/images/2024-03-31-Hypervisor Study-06-05-2024.png
+assets/images/2024-03-31-Hypervisor Study-06-08-2024-1.png
+assets/images/2024-03-31-Hypervisor Study-06-08-2024-2.png
+assets/images/2024-03-31-Hypervisor Study-06-08-2024.png
+assets/images/2024-03-31-Hypervisor Study-06-09-2024.png
+assets/images/2024-03-31-Hypervisor Study-06-10-2024-1.png
+assets/images/2024-03-31-Hypervisor Study-06-10-2024.png
+_posts/2024-03-31-Hypervisor From Scratch.md
+_posts/2024-04-05-Useful Code Snippets.md
